tests/NormalTests/paczka2/big_fuzzy/34816465.err
Error in line 1: S525 S480 82,8
Error in line 25: S525 A466 50,2
Error in line 28: kYeVYDf A466 19,8
Error in line 29: S525 S480 8,8
Error in line 34: r2cM7kNYJ S480 15,8
Error in line 37: r2cM7kNYJ S525 11,1
Error in line 49: g3Qhaf S480 25,1
Error in line 60: S525 S525 31,0
Error in line 62: S525 S480 5h,6
Error in line 45: aZ7VdK7 S480 6,4
Error in line 80: kYeVYDf S480 -3,7
Error in line 72: g3Qhaf A466 91,4
Error in line 83: g3Qhaf S717 28,7
Error in line 85: g3Qhaf A466 28,1
Error in line 79: kYeVYDf S480 57,0
Error in line 92: vB30kt05 S525 0,6
Error in line 93: g3Qhaf S480 53,8
Error in line 100: g3Qhaf A466 91,7
Error in line 104: g3Qhaf S717 25,5
Error in line 115: kYeVYDf S717 26,8
Error in line 116: g3Qhaf A466 112,3
Error in line 123: g3Qhaf S525 0,2
Error in line 131: kECraZi S717 38,9
Error in line 125: aZ7VdK7 S525 2,9
Error in line 135: aZ7VdK7 A466 22,4
Error in line 133: S525 S717 23,0
Error in line 149: aZ7VdK7 S525 91,1
Error in line 160: g3Qhaf A466 63,4
Error in line 166: aZ7VdK7 S717 77,1
Error in line 169: aZ7VdK7 A466 31,9
Error in line 163: kECraZi S525 10,6
Error in line 176: kECraZi S480 96,9
Error in line 181: kECraZi S525 99,0
Error in line 178: S525 A466 192,0
Error in line 190: kYeVYDf A466 57,5
Error in line 197: g3Qhaf S717 64,0
Error in line 202: r2cM7kNYJ S480 6,5
Error in line 215: aZ7VdK7 A466 164,1
Error in line 216: aZ7VdK7 S717 61,1
Error in line 219: vB30kt05 A466 42,7
Error in line 229: S525 A466 119,1
Error in line 233: S525 S480 76,8
Error in line 235: S525 A466 12,8
Error in line 232: kECraZi A466 24,5
Error in line 242: kECraZi S480 79,4
Error in line 248: SU2U S717 U0,U
